# chat_message_box

./: CMakeLists.txt  chatmessagewrapperwidget.cpp  chatmessagewrapperwidget.h  chatwidget.cpp  chatwidget.h  chatwidget.ui  img.qrc  main.cpp  ui_chatwidget.h
